wolfshop/catalog/wolfshop-catalog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wolfshop-catalog
  name: wolfshop-catalog
  namespace: wolfshop
#--------------- deploy -------------------------------------------  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wolfshop-catalog
#---------------- pod ---------------------------------------------      
  template:
    metadata:
      labels:
        app: wolfshop-catalog
    spec:
      containers:
      - image: nginx:1.28.2-alpine
        name: wolfshop-catalog-container
        command: ["sh", "-c"]
        args: 
        - |
            echo "<h1>Wolfshop - Catalog</h1><hr>" > "/usr/share/nginx/html/index.html"
            while true; do
              echo "$(date +"%Y-%m-%d %H:%M:%S") wolfshop catalog is running..."
              sleep 10
            done &
            nginx -g "daemon off;"
        volumeMounts:
        - name: catalog-volume
          mountPath: /data
        ports:
        - containerPort: 80
      volumes:
      - name: catalog-volume
        persistentVolumeClaim:
          claimName: wolfshop-nfs-pvc
